# fastmcp

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  loq.toml  pyproject.toml  sample.py
.claude/: settings.json
.claude/hooks/: session-init.sh
.cursor/rules/: core-mcp-objects.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: benchmarks.yml  martian-issue-triage.yml  martian-test-failure.yml  martian-triage-issue.yml  marvin-comment-on-issue.yml  marvin-comment-on-pr.yml  marvin-dedupe-issues.yml  marvin-label-triage.yml  marvin.yml  minimize-resolved-reviews.yml  pages.yml  run-schema-crash-test.yml  run-static.yml  run-tests.yml  run-upgrade-checks.yml  test-minimal-deps.yml  update-config-schema.yml  update-sdk-docs.yml
benchmarks/: conftest.py  emit_import_metrics.py  test_bench_import.py  test_bench_mount.py  test_bench_server.py  test_bench_stdio.py  test_bench_tool_call.py
data/: index.json
data/badges/: max.json  mean.json  median.json  min.json  ops.json  rounds.json  stddev.json
data/index/: metrics.json  refs.json
data/runs/: 24051666210-1--benchmark.json  24053886292-1--benchmark.json  24219287572-1--benchmark.json  backfill-v2.14.0--benchmark.json  backfill-v3.0.0--benchmark.json  backfill-v3.0.0b1--benchmark.json  backfill-v3.1.0--benchmark.json
data/series/: max.json  mean.json  median.json  min.json  ops.json  rounds.json  stddev.json
docs/: changelog.mdx  docs.json  fastmcp-analytics.js  python-sdk-pages.json  updates.mdx  v2-banner.js  v2-navigation.json
docs/apps/: architecture.mdx  components.mdx  development.mdx  generative.mdx  interactive-apps.mdx  low-level.mdx  overview.mdx  patterns.mdx  prefab.mdx  quickstart.mdx
docs/cli/: auth.mdx  client.mdx  generate-cli.mdx  inspecting.mdx  install-mcp.mdx  overview.mdx  running.mdx
docs/clients/: cli.mdx  client.mdx  elicitation.mdx  generate-cli.mdx  logging.mdx  notifications.mdx  progress.mdx  prompts.mdx  resources.mdx  roots.mdx  sampling.mdx  tasks.mdx  tools.mdx  transports.mdx
docs/community/: showcase.mdx
docs/css/: banner.css  style.css
docs/deployment/: http.mdx  prefect-horizon.mdx  running-server.mdx
docs/development/: contributing.mdx  upgrade-guide.mdx
docs/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/integrations/: anthropic.mdx  auth0.mdx  authkit.mdx  aws-cognito.mdx  azure.mdx  chatgpt.mdx  claude-code.mdx  claude-desktop.mdx  cursor.mdx  descope.mdx  discord.mdx  eunomia-authorization.mdx  fastapi.mdx  gemini-cli.mdx  github.mdx  google.mdx  goose.mdx  keycloak.mdx  mcp-json-configuration.mdx  oci.mdx  openai.mdx  openapi.mdx  propelauth.mdx  scalekit.mdx  supabase.mdx  workos.mdx
docs/more/: settings.mdx
docs/patterns/: cli.mdx  contrib.mdx  testing.mdx  tool-transformation.mdx
docs/python-sdk/: fastmcp-apps-app.mdx  fastmcp-apps-file_upload.mdx  fastmcp-apps-form.mdx  fastmcp-cli-apps_dev.mdx  fastmcp-cli-auth.mdx  fastmcp-cli-cimd.mdx  fastmcp-cli-cli.mdx  fastmcp-cli-client.mdx  fastmcp-cli-discovery.mdx  fastmcp-cli-generate.mdx  fastmcp-cli-install-claude_code.mdx  fastmcp-cli-install-claude_desktop.mdx  fastmcp-cli-install-cursor.mdx  fastmcp-cli-install-gemini_cli.mdx  fastmcp-cli-install-goose.mdx  fastmcp-cli-install-mcp_json.mdx  fastmcp-cli-install-shared.mdx  fastmcp-cli-install-stdio.mdx  fastmcp-cli-run.mdx  fastmcp-cli-tasks.mdx  fastmcp-client-auth-bearer.mdx  fastmcp-client-auth-oauth.mdx  fastmcp-client-client.mdx  fastmcp-client-elicitation.mdx  fastmcp-client-logging.mdx  fastmcp-client-messages.mdx  fastmcp-client-mixins-__init__.mdx  fastmcp-client-mixins-prompts.mdx  fastmcp-client-mixins-resources.mdx  fastmcp-client-mixins-task_management.mdx  fastmcp-client-mixins-tools.mdx  fastmcp-client-oauth_callback.mdx  fastmcp-client-progress.mdx  fastmcp-client-prompts.mdx  fastmcp-client-resources.mdx  fastmcp-client-roots.mdx  fastmcp-client-sampling-__init__.mdx  fastmcp-client-sampling-handlers-__init__.mdx  fastmcp-client-sampling-handlers-anthropic.mdx  fastmcp-client-sampling-handlers-google_genai.mdx  (+192 more)
docs/servers/: authorization.mdx  composition.mdx  context.mdx  dependency-injection.mdx  elicitation.mdx  enabled.mdx  icons.mdx  lifespan.mdx  logging.mdx  middleware.mdx  pagination.mdx  progress.mdx  prompts.mdx  resources.mdx  sampling.mdx  server.mdx  storage-backends.mdx  tasks.mdx  telemetry.mdx  tools.mdx  versioning.mdx  visibility.mdx
docs/snippets/: version-badge.mdx
docs/tutorials/: rest-api.mdx
docs/v2/: changelog.mdx  updates.mdx
examples/: custom_tool_serializer_decorator.py  elicitation.py  mount_example.py  run_with_tracing.py  sampling_fallback.py  tags_example.py  task_elicitation.py  tool_result_echo.py  tracing_setup.py
examples/advanced_sampling/: README.md  client_sampling_test.py  structured_output.py  tool_use.py
examples/apps/: chart_server.py  (+2 more)
fastmcp_slim/: pyproject.toml
fastmcp_slim/fastmcp/: settings.py  telemetry.py
fastmcp_slim/fastmcp/apps/: app.py
fastmcp_slim/fastmcp/client/: telemetry.py
fastmcp_slim/fastmcp/prompts/: function_prompt.py
fastmcp_slim/fastmcp/resources/: template.py
fastmcp_slim/fastmcp/server/: telemetry.py
fastmcp_slim/fastmcp/server/middleware/: rate_limiting.py
fastmcp_slim/fastmcp/server/providers/local_provider/decorators/: tools.py
fastmcp_slim/fastmcp/tools/: function_parsing.py  function_tool.py
fastmcp_slim/fastmcp/utilities/: callable_utils.py
pages/: index.html
plans/: 03-health-endpoint.md  04-resource-subscriptions.md  05-curator-provider.md  06-dynamic-resources.md
scripts/: auto_close_duplicates.py  auto_close_needs_mre.py  benchmark_imports.py
tests/: conftest.py  test_apps.py  test_apps_prefab.py  test_fastmcp_app.py  test_json_schema_generation.py  test_mcp_config.py
v3-notes/: get-methods-consolidation.md  prompt-internal-types.md  provider-architecture.md  provider-test-pattern.md  resource-internal-types.md  task-meta-parameter.md  visibility.md
(+738 files in other folders)
